<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/paginainicio"
            android:title="@string/menu_inicio" />

        <item
            android:id="@+id/nav_tcompleto"
            android:icon="@drawable/tcompleto"
            android:title="@string/menu_tcompleto" />
        <item
            android:id="@+id/nav_xdias"
            android:icon="@drawable/xdias"
            android:title="@string/menu_xdias" />



        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/cerrarsesion"
            android:title="@string/menu_salir" />
    </group>
</menu>