<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.nominavalen.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />
    <fragment
        android:id="@+id/nav_tcompleto"
        android:name="com.example.nominavalen.ui.tcompleto.TcompletoFragment"
        android:label="@string/menu_tcompleto"
        tools:layout="@layout/fragment_tcompleto" />

    <fragment
        android:id="@+id/nav_xdias"
        android:name="com.example.nominavalen.ui.xdias.XdiasFragment"
        android:label="@string/menu_xdias"
        tools:layout="@layout/fragment_xdias" />


    <fragment
        android:id="@+id/nav_salir"
        android:name="com.example.nominavalen.ui.salir.SalirFragment"
        android:label="@string/menu_salir"
        tools:layout="@layout/fragment_salir" />
</navigation>