<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
   tools:context=".Registrar"
    android:background="@drawable/vector_1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        app:srcCompat="@drawable/registrarse" />

    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/nombre"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rnombre"
            android:inputType="textUri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/apellidos"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rapellidos"
            android:inputType="textUri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/correo"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rcorreo"
            android:inputType="textUri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/contraseña"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rcontrasena"
            android:inputType="textUri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/contancto"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rcontancto"
            android:inputType="textUri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_registrar"
        android:text="@string/registar"
        android:drawableEnd="@android:drawable/ic_menu_send"

        />
</LinearLayout>