<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vector_1"
    tools:context=".ui.xdias.XdiasFragment">

    <EditText
        android:id="@+id/fechainicioxdias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/fechaini"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/btnfechainioxdias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fecha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.798"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134"
        tools:ignore="MissingConstraints,Suspicious0dp" />

    <EditText
        android:id="@+id/fechafinxdias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="432dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/fechafin"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/btnfechafinxdias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fecha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.798"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292"
        tools:ignore="MissingConstraints,Suspicious0dp" />

    <EditText
        android:id="@+id/salarixdias"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/salariodiario"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/semana"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/porsemana"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/auxtraxdias"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="AUXILIO DE TRANSPORTE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718"
        tools:ignore="HardcodedText,TouchTargetSizeCheck" />

    <RadioGroup
        android:layout_width="81dp"
        android:layout_height="91dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743">

        <RadioButton
            android:id="@+id/Si"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:text="Si"
            tools:ignore="HardcodedText" />

        <RadioButton
            android:id="@+id/No"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:text="No"
            tools:ignore="HardcodedText" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="312dp"
        android:layout_height="77dp"
        android:drawableEnd="@android:drawable/ic_menu_send"
        android:text="@string/calcularcompleto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891" />


</androidx.constraintlayout.widget.ConstraintLayout>